<resources>
    <string name="app_name">Hipotenochas</string>
    <string name="Cambio_de_personaje">Cambio de personaje</string>
    <string name="Instrucciones">Instrucciones</string>
    <string name="Comenzar_juego">Comenzar juego</string>
    <string name="Configurar">Selector de dificultad</string>
    <string name="textInstruc">CONDICIÓN DE VICTORIA: El usuario gana cuando ha despejado todo el tablero y ha marcado
correctamente todas las hipotenochas.\nCONDICIÓN DE DERROTA: El usuario pierde cuando ha ocurrido no ha marcado
correctamente todas las hipotenochas o pulsa sobre una.</string>
    <string name="toastcomenzar">Comenzando juego...</string>
    <string name="cambioPersonaje">Cambiando personaje...</string>
    <string name="confi">Configuración de dificultad</string>
    <string name="gato">gato</string>
    <string name="lost">Has perdido</string>
    <string name="encontrada">Hipotenocha encontrada!</string>
    <string name="instrucciones">Cerrar instrucciones</string>
    <string name="tituloInstrucicnes">Instrucciones</string>
    <string name="Winner">¡¡¡Has ganado!!!!</string>
    <string name="loser">Lo siento, has perdido....</string>
    <string name="nivelDificil">Jugar en modo profesional</string>
    <string name="nivelFacil">Jugar modo fácil</string>
    <string name="nivelMedio">Jugar en modo medio</string>
</resources>