<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    tools:context=".MainActivity" >

    <item android:id="@+id/seleccionGato"
        android:title="@string/Cambio_de_personaje"
        android:orderInCategory="100"
        android:icon="@drawable/gato"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/instrucciones"
        android:title="@string/Instrucciones"
        android:orderInCategory="2">
    </item>

    <item android:id="@+id/comenzarJuego"
        android:title="@string/Comenzar_juego"
        android:orderInCategory="3">
    </item>

    <item android:id="@+id/configurar"
        android:title="@string/Configurar"
        android:orderInCategory="4">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nivelFacil"
                    android:title="@string/nivelFacil"
                    android:orderInCategory="1" />
                <item android:id="@+id/nivelMedio"
                    android:title="@string/nivelMedio"
                    android:orderInCategory="2" />
                <item android:id="@+id/nivelDificil"
                    android:title="@string/nivelDificil"
                    android:orderInCategory="2" />
                <item android:id="@+id/PedAnulados"
                    android:title="Ver Pedidos Anulados"
                    android:orderInCategory="2" />
            </group>
        </menu>
    </item>
</menu>